--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=kitap_satis_platformu;user=root;password=sk777802;"
+    "DefaultConnection": "server=localhost;port=3306;database=katstratford;user=root;password=sk777802;"
   },
   "Logging": {
     "LogLevel": {
